Fix wrapping on header buttons for mobile

--- a/app/assets/styles/modules/_buttons.css
+++ b/app/assets/styles/modules/_buttons.css
@@ -13,13 +13,13 @@
     border: solid 1px $nearBlack;
     z-index: 400;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     background: transparent;
     margin: 0.5em 0.5em;
     text-transform: uppercase;
     i {
-        padding-left: 0.5em;
+        padding-left: 0.1em;
         color: $nearBlack;
     }
 }
@@ -85,7 +85,7 @@
 
 .back-to-top:active {
     -webkit-transform: translateY(4px);
-            transform: translateY(4px);
+    transform: translateY(4px);
 }
 
 .modal__close-btn {
